gobmkida/g2/compute_connection_distances
/data/output_dir/patch/gobmk/ida/gcc/O2/gobmk-gcc-O2/compute_connection_distances/src/engine/readconnect.c:1960:13: error: use of undeclared identifier 'dword_76BCFC'
v32 = v24 + dword_76BCFC[v30]; 
            ^
/data/output_dir/patch/gobmk/ida/gcc/O2/gobmk-gcc-O2/compute_connection_distances/src/engine/readconnect.c:2211:7: error: use of undeclared identifier 'dword_76BCFC'
v49 = dword_76BCFC[v401]; 
      ^
2 errors generated.
make: *** [/data/output_dir/patch/gobmk/ida/gcc/O2/gobmk-gcc-O2/compute_connection_distances/src/obj/1/readconnect.o] Error 1
